# repo-pattern-example

./: README.md  pyproject.toml
repo/db/: database.py
repo/db/tables/: __init__.py  base.py  hero.py  tables.py  team.py
repo/model/: base_model.py  team.py
repo/repository/: generic.py  hero.py  team.py
repo/service/: uow.py
src/repo/: schemas.py
src/repo/db/: __init__.py  database.py
src/repo/model/: hero.py  team.py
src/repo/repository/: generic.py  hero.py  team.py
src/repo/service/: uow.py
tests/: conftest.py  test_database.py  test_repository.py  test_uow.py
